# shadowply

./: .gitignore  CMakeLists.txt  readme.md
shadowply/: CMakeLists.txt  capture.c  capture.h  encoder.c  encoder.h  libav.c  libav.h  runner.c  runner.h  shadowply.c  util.c  util.h  window_util.c  window_util.h
shadowply/capture/: dc_capture.c  dc_capture.h
